<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/btSightseeing"
        android:layout_width="189dp"
        android:layout_height="93dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/sightseeing_group"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/button_sightseeing_places"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btFood" />

    <ImageButton
        android:id="@+id/btFood"
        android:layout_width="190dp"
        android:layout_height="83dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/food_group"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/button_more_food_placeses"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btTour" />

    <ImageButton
        android:id="@+id/btTour"
        android:layout_width="190dp"
        android:layout_height="82dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/tour_group"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/button_more_tours"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_best_places" />

    <TextView
        android:id="@+id/tvSnippet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:textSize="@dimen/text_size_16"
        android:transitionName="@string/snippet_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="@dimen/text_size_32"
        android:transitionName="@string/name_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_best_places"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="serif"
        android:text="@string/best_places"
        android:textSize="@dimen/text_size_21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSnippet" />

</androidx.constraintlayout.widget.ConstraintLayout>
</merge>